
package Protos;

message TimeSeries {
    repeated double data = 1 [packed=true];
}


message LabeledTimeSeries {
    required string label = 1;
    required TimeSeries ts = 2;
}


